[package]
name = "tachyon"
version = "0.1.0"
edition = "2024"

[dependencies]
io-uring = "0.7"
libc = { version = "0.2.174", features = ["extra_traits"] }
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.17"
socket2 = { version = "0.6", features = ["all"] }
tracing = "0.1"
tracing-subscriber = "0.3"
stable-vec = "0.4"
thread-priority = "2.1"
memchr = "2.7"
core_affinity = "0.8"
bytes = "1.10"
nano_clock = "1.0.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false

[profile.profiling]
inherits = "release"
debug = true
strip = false